--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -57,8 +57,6 @@
     <string name="X_whichSendToApplication">Compartilhar</string>
     <string name="a_b">%1$s%2$s</string>
     <string name="a_bracket_b_bracket">%1$s (%2$s)</string>
-    <string name="acra_resDialogCommentPrompt">Os seus comentários (ou deixe em branco):</string>
-    <string name="acra_resDialogText">Parece que &APP_NAME; encerrou inesperadamente. Se possível, descreva abaixo tudo o que acha poder ser relevante e prima “OK” para nos enviar um e-mail sobre este encerramento. Irá ver o e-mail antes de ser enviado.</string>
     <string name="option_apply_to_all_related_books">Todos os livros relacionados</string>
     <string name="action_add">Adicionar</string>
     <string name="action_clear">Limpar</string>
@@ -85,8 +83,9 @@
     <string name="and_others_plus"><![CDATA[%1$s … <small>[+%2$d]</small>]]></string>
     <string name="bob_empty_field">(Vazio)</string>
     <string name="cancelled">Cancelado</string>
-    <string name="debug_email_body">Por favor reserve algum tempo para descrever brevemente o problema que encontrou.</string>
-    <string name="debug_email_subject">Informações de depuração recolhidas</string>
+    <string name="acra_dialog_message">Parece que o &APP_NAME; foi bloqueado. Toque em “%1$s” para guardar um relatório numa localização à sua escolha. Pode utilizar este relatório para comunicar um novo problema no site do projeto.</string>
+    <string name="X_debug_email_body">Por favor reserve algum tempo para descrever brevemente o problema que encontrou.</string>
+    <string name="X_debug_email_subject">Informações de depuração recolhidas</string>
     <string name="debug_select_items">Seleccione o que gostaria de incluir:</string>
     <string name="error_certificate_invalid">O certificado é inválido ou inacessível.</string>
     <string name="error_network_failed_try_again">Verifique a conexão e tente novamente.</string>
@@ -818,4 +817,6 @@
     <string name="pe_bob_cover_click_zoom">Aumentará o zoom da imagem da capa.</string>
     <string name="pe_bob_cover_click_details">Abre a página de detalhes do livro.</string>
     <string name="style_type_defaults">Predefinições de estilo</string>
+    <string name="acra_report_saved">Pode agora visitar a página do projeto no Github e registar um novo problema. Anexe o relatório guardado anteriormente ao problema. Se ainda não tiver uma conta no Github, terá de criar uma.</string>
+    <string name="action_report">Informar</string>
 </resources>
